--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import './module/Album/album.style';
+@import './variables.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
