--- a/src/module/Album/_album.style.scss
+++ b/src/module/Album/_album.style.scss
@@ -1,21 +1,13 @@
-// import { makeStyles } from '@material-ui/core/styles';
-
-// const useStyles = makeStyles({
-//   card: {
-//     maxWidth: 345,
-//   },
-//   media: {
-//     height: 140,
-//   },
-// });
+.album-wrapper{
+}
 
 .album{
   &.card{
-    max-width: 345px;
+    width: 25%;
   }
   &.media{
-    height: 140px;
-    color: red;
+    height: 170px;
+    
   }
 }
 
