refined folder structure

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,5 @@
 @import './app';
-@import './module/Album/album.style';
+@import './module/components/Album/album.style';
 @import './variables';
 @import './module/Navbar/navbar';
 
