--- a/src/module/components/Album/_album.style.scss
+++ b/src/module/components/Album/_album.style.scss
@@ -10,7 +10,7 @@
   &.media{
     height: -moz-available;
     height: -webkit-fill-available;
-    height: fill-available;
+    height: stretch;
     max-height: 150px;
   }
 }
