--- a/src/module/components/AlbumDetails/_albumDetails.style.scss
+++ b/src/module/components/AlbumDetails/_albumDetails.style.scss
@@ -6,7 +6,7 @@
   &.media{
     height: -moz-available;          /* WebKit-based browsers will ignore this. */
     height: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
-    height: fill-available;  
+    height: stretch;  
     margin-bottom: 2%; 
   }
   &.typography{
