--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 @import './module/components/Album/album.style';
 @import './variables';
 @import './module/Navbar/navbar';
+@import './module/components/AddAlbum/addAlbum.style';
 
 body {
   margin: 0;
