--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 @import './variables';
 @import './module/Navbar/navbar';
 @import './module/components/AddAlbum/addAlbum.style';
+@import './module/Navbar/Filter/filter.style';
 
 body {
   margin: 0;
